# GameServerHW-rs

./: .gitignore
game_server_hw/: Cargo.toml  README.md
game_server_hw/client/: Cargo.toml  build.rs
game_server_hw/client/src/framework/: camera.rs  color.rs  mod.rs  model.rs  resources.rs
game_server_hw/dummy_client/: Cargo.toml
game_server_hw/dummy_client/src/: main.rs
game_server_hw/get_addr/: Cargo.toml
game_server_hw/get_addr/src/: lib.rs
game_server_hw/network/: Cargo.toml
game_server_hw/network/src/: lib.rs  packet.rs  protocol.rs
game_server_hw/server/: Cargo.toml  arch.drawio
game_server_hw/server/src/: main.rs
game_server_hw/server/src/server/: mod.rs  tcp_server.rs
game_server_hw01/: Cargo.toml  README.md
game_server_hw01/src/: lib.rs  main.rs  shader.wgsl
game_server_hw01/src/framework/: camera.rs  color.rs  instance.rs  mod.rs  model.rs  object.rs  state.rs  transform.rs  vertex.rs
game_server_hw01/src/framework/scene/: game_scene.rs  mod.rs
game_server_hw02/: Cargo.toml  README.md
game_server_hw02/client/: Cargo.toml
game_server_hw02/client/src/: lib.rs  main.rs
game_server_hw02/client/src/framework/: mod.rs  model.rs  object.rs
game_server_hw02/client/src/server/: mod.rs
game_server_hw02/get_addr/src/: lib.rs
game_server_hw02/server/: Cargo.toml
game_server_hw02/server/src/: main.rs
game_server_hw02/server/src/server/: mod.rs  tcp_server.rs  udp_server.rs
test/client/: Cargo.toml
test/client/src/: main.rs
test/server/: Cargo.toml
test/server/src/: main.rs
(+6 files in other folders)
