[package]
name = "game_server_hw01"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4.22"
wgpu = "0.20.1"
bytemuck = { version = "1.16.1", features = ["derive"] }
cgmath = "0.18.0"
tobj = { version = "3.2.1", features = ["async"]}
anyhow = "1.0"

futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"